Modernize calls to collection.get(0)